--- a/templates/article.html
+++ b/templates/article.html
@@ -1,5 +1,6 @@
 {% extends 'basic_template.html' %}
 {% load static %}
+
 {% block content %}
 
     <!-- Feed -->
@@ -33,7 +34,7 @@
                 </a>
             </div>
 
-            <!-- Tytuł, data utworzenia i liczba wyświetleń -->
+            <!-- Tytuł, data i wyświetlenia -->
             <div>
                 <h2 class="mt-2 text-2xl font-bold text-gray-900">{{ article.title }}</h2>
                 <p class="mt-1 text-sm text-gray-500">
@@ -42,62 +43,120 @@
             </div>
 
             <!-- Przyciski -->
-                <div class="mt-6 flex justify-between items-center text-sm text-gray-500">
-                    <!-- Przyciski po lewej: Pobierz, Obserwuj -->
-                    <div class="flex items-center gap-4">
+            <div class="mt-6 flex justify-between items-center text-sm text-gray-500">
 
-                    <!-- Pobierz plik -->
-                        <a href="{% url 'download_article_file' article.id %}"
-                            class="flex items-center gap-1 bg-blue-100
-                            text-blue-700 px-3 py-1 rounded-md text-sm">
-                            🡇 Pobierz
-                        </a>
+                <!-- Lewa część: Pobierz, Obserwuj -->
+                <div class="flex items-center gap-4">
+                    <a href="{% url 'download_article_file' article.id %}"
+                       class="flex items-center gap-1 bg-blue-100 text-blue-700 px-3 py-1 rounded-md text-sm">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                             stroke="currentColor" class="size-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                  d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3"></path>
+                        </svg>
 
-                        <!-- Follow/Unfollow -->
-                        {% if article.followed_by_user %}
-                            <form action="{% url 'unfollow_article' article.id %}" method="post" class="inline">
-                                {% csrf_token %}
-                                <input type="hidden" name="requester" value="article">
-                                <button type="submit" class="text-blue-600 hover:underline flex items-center gap-1">
-                                    <span class="text-base">🔕</span>
-                                    <span>Nie obserwuj</span>
-                                </button>
-                            </form>
-                        {% else %}
-                            <form action="{% url 'follow_article' article.id %}" method="post" class="inline">
-                                {% csrf_token %}
-                                <input type="hidden" name="requester" value="article">
-                                <button type="submit" class="text-blue-600 hover:underline flex items-center gap-1">
-                                    <span class="text-base">🔔</span>
-                                    <span>Obserwuj</span>
-                                </button>
-                            </form>
-                        {% endif %}
-                    </div>
+                        Pobierz
+                    </a>
 
-                    <!-- Przycisk po prawej: Like -->
-                    <div class="flex items-center gap-4">
-                        <span>{{ article.like_count }} ❤️</span>
+                    {% if article.followed_by_user %}
+                        <form action="{% url 'unfollow_article' article.id %}" method="post" class="inline">
+                            {% csrf_token %}
+                            <button type="submit" class="text-blue-600 hover:underline flex items-center gap-1">
+                                <span class="text-base">
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                         fill="none"
+                                         viewBox="0 0 24 24"
+                                         stroke-width="1.5"
+                                         class="size-6"
+                                         style="stroke:#FFD700;">
+                                      <!-- Żółta ikona -->
+                                      <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0"></path>
 
-                        {% if article.liked_by_user %}
-                            <form action="{% url 'unlike_article' article.id %}" method="post" class="inline">
-                                {% csrf_token %}
-                                <button type="submit" class="text-blue-600 hover:underline flex items-center gap-1">
-                                    <span class="text-base">👍</span>
-                                    <span>Lubisz to</span>
-                                </button>
-                            </form>
-                        {% else %}
-                            <form action="{% url 'like_article' article.id %}" method="post" class="inline">
-                                {% csrf_token %}
-                                <button type="submit" class="text-blue-600 hover:underline flex items-center gap-1">
-                                    <span class="text-base">👍</span>
-                                    <span>Polub</span>
-                                </button>
-                            </form>
-                        {% endif %}
-                    </div>
+                                        <!-- Czerwona przekreślająca kreska -->
+                                      <path stroke-linecap="round" stroke-linejoin="round" stroke="red" d="M3 3l18 18"></path>
+                                    </svg>
+                                </span>
+                                <span>Nie obserwuj</span>
+                            </button>
+                        </form>
+                    {% else %}
+                        <form action="{% url 'follow_article' article.id %}" method="post" class="inline">
+                            {% csrf_token %}
+                            <button type="submit" class="text-blue-600 hover:underline flex items-center gap-1">
+                                <span class="text-base">
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                         fill="none"
+                                         viewBox="0 0 24 24"
+                                         stroke-width="1.5"
+                                         stroke="#FFD700"
+                                         class="size-6"
+                                         style="stroke:#FFD700;">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0"></path>
+                                    </svg>
+
+
+                                </span>
+                                <span>Obserwuj</span>
+                            </button>
+                        </form>
+                    {% endif %}
                 </div>
+
+                <!-- Prawa część: Like -->
+                <div class="flex items-center gap-6">
+                    <!-- Liczba polubień z serduszkiem -->
+                    <span class="flex items-center gap-1 text-gray-700">
+                        {{ article_like_count }}
+                        {% if article.liked_by_user %}
+                            <!-- Wypełnione czerwone serduszko -->
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="red" stroke="red"
+                                 class="size-5">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                      d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"></path>
+                            </svg>
+                        {% else %}
+                            <!-- Puste serduszko -->
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                 stroke="currentColor" class="size-5">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                      d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z"></path>
+                            </svg>
+                        {% endif %}
+                    </span>
+
+                    <!-- Formularz tylko dla kciuka i tekstu -->
+                    <form action="
+
+
+
+                            {% if article.liked_by_user %}{% url 'unlike_article' article.id %}{% else %}{% url 'like_article' article.id %}{% endif %}"
+                          method="post" class="inline">
+                        {% csrf_token %}
+                        <button type="submit"
+                                class="flex items-center gap-2 group transition-all text-gray-700 hover:text-blue-600">
+                            {% if article.liked_by_user %}
+                                <!-- Kciuk -->
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                     stroke-width="1.5" stroke="currentColor" class="size-5">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                          d="M6.633 10.25c.806 0 1.533-.446 2.031-1.08a9.041 9.041 0 0 1 2.861-2.4c.723-.384 1.35-.956 1.653-1.715a4.498 4.498 0 0 0 .322-1.672V2.75a.75.75 0 0 1 .75-.75 2.25 2.25 0 0 1 2.25 2.25c0 1.152-.26 2.243-.723 3.218-.266.558.107 1.282.725 1.282m0 0h3.126c1.026 0 1.945.694 2.054 1.715.045.422.068.85.068 1.285a11.95 11.95 0 0 1-2.649 7.521c-.388.482-.987.729-1.605.729H13.48c-.483 0-.964-.078-1.423-.23l-3.114-1.04a4.501 4.501 0 0 0-1.423-.23H5.904m10.598-9.75H14.25M5.904 18.5c.083.205.173.405.27.602.197.4-.078.898-.523.898h-.908c-.889 0-1.713-.518-1.972-1.368a12 12 0 0 1-.521-3.507c0-1.553.295-3.036.831-4.398C3.387 9.953 4.167 9.5 5 9.5h1.053c.472 0 .745.556.5.96a8.958 8.958 0 0 0-1.302 4.665c0 1.194.232 2.333.654 3.375Z"></path>
+                                </svg>
+                                <span class="underline text-blue-600 text-sm">Lubisz to</span>
+                            {% else %}
+                                <!-- Kciuk -->
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                     stroke-width="1.5" stroke="currentColor" class="size-5">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                          d="M6.633 10.25c.806 0 1.533-.446 2.031-1.08a9.041 9.041 0 0 1 2.861-2.4c.723-.384 1.35-.956 1.653-1.715a4.498 4.498 0 0 0 .322-1.672V2.75a.75.75 0 0 1 .75-.75 2.25 2.25 0 0 1 2.25 2.25c0 1.152-.26 2.243-.723 3.218-.266.558.107 1.282.725 1.282m0 0h3.126c1.026 0 1.945.694 2.054 1.715.045.422.068.85.068 1.285a11.95 11.95 0 0 1-2.649 7.521c-.388.482-.987.729-1.605.729H13.48c-.483 0-.964-.078-1.423-.23l-3.114-1.04a4.501 4.501 0 0 0-1.423-.23H5.904m10.598-9.75H14.25M5.904 18.5c.083.205.173.405.27.602.197.4-.078.898-.523.898h-.908c-.889 0-1.713-.518-1.972-1.368a12 12 0 0 1-.521-3.507c0-1.553.295-3.036.831-4.398C3.387 9.953 4.167 9.5 5 9.5h1.053c.472 0 .745.556.5.96a8.958 8.958 0 0 0-1.302 4.665c0 1.194.232 2.333.654 3.375Z"></path>
+                                </svg>
+                                <span class="text-sm text-gray-600">Polub to</span>
+                            {% endif %}
+                        </button>
+                    </form>
+                </div>
+            </div>
 
             <!-- Treść artykułu -->
             <div class="mt-6 leading-relaxed text-base text-gray-700">
@@ -123,9 +182,9 @@
                             <div>
                                 <h3 class="font-medium text-gray-900">{{ comment.user.username }}</h3>
                                 <span class="border inline-flex items-center rounded-md
-                                bg-blue-50 px-2 py-1 text-xs font-medium text-blue-700 ring-1
-                                ring-blue-700/10 ring-inset">{{ comment.created_at|date:"j E Y" }}
-                                </span>
+                            bg-blue-50 px-2 py-1 text-xs font-medium text-blue-700 ring-1
+                            ring-blue-700/10 ring-inset">{{ comment.created_at|date:"j E Y" }}
+                            </span>
                                 <div class="mt-4 space-y-6 text-base text-gray-600 italic">
                                     {{ comment.content }}
                                 </div>
@@ -134,7 +193,15 @@
                     </div>
                 {% endfor %}
             {% else %}
-                <p class="text-sm text-gray-500 italic">🗨️ Brak komentarzy do tego artykułu.</p>
+                <p class="text-sm text-gray-500 italic">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                         stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                              d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 0 1 .865-.501 48.172 48.172 0 0 0 3.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0 0 12 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018Z"></path>
+                    </svg>
+
+                    Brak komentarzy do tego artykułu.
+                </p>
             {% endif %}
             {% include "_comment_form.html" %}
         </div>
