--- a/templates/basic_template.html
+++ b/templates/basic_template.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/tailwind.css' %}">
-    <title>Nawigacja</title>
+    <title>SCInet</title>
 </head>
 <body class="bg-white">
 <!-- Pasek nawigacyjny -->
